Fix Android WebView position fixed bug by removing overflow-x: hidden from body

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -96,7 +96,6 @@ body {
     min-height: 100dvh;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
     padding-bottom: calc(100px + env(safe-area-inset-bottom));
 }
 
