--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow-x: hidden;
 }
 
 /* Juiciness - Button Squish Animation */
