--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -600,7 +600,8 @@
 /* Force absolute horizontal viewport containment */
 html, body {
     max-width: 100%;
-    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
     position: relative;
 }
 
